<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NutrientesActivity"
    android:background="@color/grayOscuro">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:background="@color/grayOscuro">

        <Button
            android:id="@+id/volverPerfilActivityP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/backActivity"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/informaci_on_personal"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/nombre"
        />


    <TextView
        android:id="@+id/txtNombreUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:background="@color/gray"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="Cristian"
/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/apellidos"
        />

    <TextView
        android:id="@+id/txtApellidosUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="30sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:background="@color/gray"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="Bersabe Atienza"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/email"
        />

    <TextView
        android:id="@+id/txtCorreoUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:background="@color/gray"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="cristianbersabe@gmail.com"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:drawablePadding="6sp"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/sexo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:background="@color/grayOscuro">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxMasculino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masculino"
        android:layout_marginStart="20sp"
        android:checked="true"
        android:textColor="@color/white" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxFemenino"
        android:layout_width="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_height="wrap_content"
        android:text="@string/femenino"
        android:textColor="@color/white" />

        </LinearLayout>

</LinearLayout>
