<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:background="@color/grayOscuro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:background="@color/gray">

        <Button
            android:id="@+id/volverMainActivityT"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/backActivity"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="23sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:background="@color/gray"
            android:weightSum="2">

            <Button
                android:id="@+id/txtSugerencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:background="@color/gray"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/sugerencia"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <Button
                android:id="@+id/txtTusSugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mis_tickets"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textAllCaps="true"/>
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/tipoSugerencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:text="@string/tipo_de_sugerencia"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:cardElevation="28dp"
        app:cardCornerRadius="8dp">

    <Spinner
        android:id="@+id/tipoSugerenciaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:padding="12dp"
        android:textColor="@color/black" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comentario"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:cardElevation="28dp"
        app:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cajetinComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escribe_tus_comentarios_u_observaciones_aqu"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:maxLines="10"
                android:scrollbars="vertical" />

        </ScrollView>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@color/gray"
        android:outlineSpotShadowColor="@color/white"
        app:cardElevation="18dp"
        app:cardCornerRadius="8dp">



        <Button
            android:id="@+id/enviarTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_ticket"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="23sp"/>



    </androidx.cardview.widget.CardView>



</LinearLayout>