<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NutrientesActivity"
    android:background="@color/grayOscuro">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:background="@color/grayOscuro">

            <Button
                android:id="@+id/volverMainActivityP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/backActivity"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/mi_perfil"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person2"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtNombrePerfil"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtInfoPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:paddingStart="30sp"
        android:drawablePadding="6sp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/informaci_n_personal"
        app:drawableStartCompat="@drawable/ic_person2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/txtDatosBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingStart="34sp"
        android:drawablePadding="8sp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/datos_biom_tricos2"
        app:drawableStartCompat="@drawable/datobiometrico" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/txtTusCambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingStart="34sp"
        android:drawablePadding="8sp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/tus_cambios"
        app:drawableStartCompat="@drawable/ic_timeline" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/txtAnhadirAlimentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingStart="34sp"
        android:drawablePadding="8sp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:text="@string/a_adir_alimentos"
        app:drawableStartCompat="@drawable/ic_add" />

    <View
        android:id="@+id/viewAddAlimento"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:background="@color/white"/>
</LinearLayout>
