<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    tools:context=".activities.SignUpDBActivity">

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/datos_biom_tricos"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alturaTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signuptitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/alturaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/altura"
            android:inputType="number"
            android:textColor="@color/white"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edadTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alturaTextInputLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edadTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/edad"
            android:inputType="number"
            android:textColor="@color/white"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/labelFactorActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edadTextInputLayout"
        android:layout_marginStart="25dp"
        android:text="@string/nivel_de_actividadlbl"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Spinner "Factor de Actividad" -->
    <Spinner
        android:id="@+id/factorActividadSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelFactorActividad"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:padding="20dp"
        android:textColor="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pesoTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/factorActividadSpinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pesoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/peso"
            android:inputType="number"
            android:textColor="@color/white"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>






    <TextView
        android:id="@+id/labelObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pesoTextInputLayout"
        android:layout_marginStart="25dp"
        android:text="@string/objetivo_lbl"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/objetivoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelObjetivo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:padding="20dp"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/objetivoSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/registrar"
            android:textSize="25sp" />

        <Button
            android:id="@+id/volverDP"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/volver"
            android:textAlignment="center"
            android:textSize="25sp" />


    </LinearLayout>


</RelativeLayout>