<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:background="@color/grayOscuro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:background="@color/gray">

        <Button
            android:id="@+id/volverMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backActivity"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="volverMain"
            android:textSize="23sp"/>


        <TextView
            android:layout_width="203dp"
            android:layout_height="37dp"
            android:layout_weight="2"
            android:text="@string/agregar_una_comida"
            android:fontFamily="sans-serif-condensed"
            android:gravity="left"
            android:paddingStart="28dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_un_alimento"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtIngresarAlimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="text|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comidasRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"

                android:background="@color/gray"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comidas"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@color/grayOscuro"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:cardElevation="28dp"
        app:cardCornerRadius="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaComida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aun_no_ha_a_adido_ninguna_comida"
            android:padding="16dp"
            android:textColor="@color/black" />


    </androidx.cardview.widget.CardView>

</LinearLayout>
